sort.basic.bubble.AlgBubbleSort3.scala.error
Erreur de compilation :
AlgBubbleSort3:8: error: missing arguments for method echange in class SortingEntity;
follow this method with `_' if you want to treat it as a partially applied function
  while ((i <= n-2) && echange){
                       ^AlgBubbleSort3:9: error: reassignment to val
    echange = false
            ^